--- a/src/widgets/Table/ui/Table.module.scss
+++ b/src/widgets/Table/ui/Table.module.scss
@@ -24,10 +24,11 @@
       border-bottom: 1px solid #cecece;
       text-align: center;
     }
+    &:hover {
+      background-color: #f8f7f7;
+    }
   }
-  tr:hover {
-    background-color: #f8f7f7;
-  }
+
 }
 
 
