--- a/src/shared/components/superButton/SuperButton.module.scss
+++ b/src/shared/components/superButton/SuperButton.module.scss
@@ -10,7 +10,7 @@
   min-height: 36px;
   width: 100%;
 
-  background: #c4e4ff;
+  background: var(--secondary-color);
   box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   border-radius: 30px;
   color: #FFFFFF;
