--- a/src/widgets/PopularCoins/ui/PopularCoins.module.scss
+++ b/src/widgets/PopularCoins/ui/PopularCoins.module.scss
@@ -1,5 +1,5 @@
 @import "../../../app/styles/mixins/mixins";
 
 .block {
-  @include FlexCenter('row', 'space-between', 'center', 20px);
+  @include FlexCenter("row", "space-between", "center", 20px);
 }
