--- a/src/widgets/Table/ui/Table.module.scss
+++ b/src/widgets/Table/ui/Table.module.scss
@@ -6,7 +6,7 @@
   thead {
     background-color: #000;
     height: 60px;
-    color: #FFFFFF;
+    color: #ffffff;
 
     th {
       text-align: center;
@@ -17,7 +17,7 @@
   }
 
   tbody tr {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 
     td {
       padding: 10px 0;
@@ -28,9 +28,4 @@
       background-color: #f8f7f7;
     }
   }
-
 }
-
-
-
-
