--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,6 @@
 .app.light {
   --bg-color: rgb(247, 247, 248);
-  --inverted-bg-color: #FFFFFF;
+  --inverted-bg-color: #ffffff;
 
   --primary-color: #232134;
   --secondary-color: #93d1ff;
