--- a/src/shared/Select/Select.module.css
+++ b/src/shared/Select/Select.module.css
@@ -1,47 +1,45 @@
 .select {
-    max-width: 256px;
-    width: 100%;
-    cursor: default;
-    position: relative;
+  max-width: 256px;
+  width: 100%;
+  cursor: default;
+  position: relative;
 }
 
 .select_selected {
-    border: 1px solid #DEDBDC;
-    height: 36px;
-    border-radius: 2px;
-    padding: 6px 12px;
-    /*background: url(./../../assets/images/downarrow.svg) no-repeat 93% 14px;*/
+  border: 1px solid #dedbdc;
+  height: 36px;
+  border-radius: 2px;
+  padding: 6px 12px;
+  /*background: url(./../../assets/images/downarrow.svg) no-repeat 93% 14px;*/
 }
 
 .select_selected.active {
-    border-radius: 2px 2px 0 0;
-    /*background: url(./../../assets/images/uparrow.svg) no-repeat 93% 14px;*/
-    
+  border-radius: 2px 2px 0 0;
+  /*background: url(./../../assets/images/uparrow.svg) no-repeat 93% 14px;*/
 }
 
 .select_options {
-    max-width: 256px;
-    width: 100%;
-    position: absolute;
-    padding: 6px 12px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    background-color: #FAF7F8;
-    border: 1px solid #DEDBDC;
-    border-top: none;
-    border-radius: 0 0 2px 2px;
+  max-width: 256px;
+  width: 100%;
+  position: absolute;
+  padding: 6px 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  background-color: #faf7f8;
+  border: 1px solid #dedbdc;
+  border-top: none;
+  border-radius: 0 0 2px 2px;
 }
 
 .select_option {
-    height: 24px;
-    border-bottom: 1px solid #F8346B;
+  height: 24px;
+  border-bottom: 1px solid #f8346b;
 }
 
 .underline {
-    width: 100%;
-    height: 1px;
-    background-color: #F8346B;
-    border-radius: 2px;
+  width: 100%;
+  height: 1px;
+  background-color: #f8346b;
+  border-radius: 2px;
 }
-
