--- a/src/shared/components/superButton/SuperButton.module.scss
+++ b/src/shared/components/superButton/SuperButton.module.scss
@@ -13,19 +13,18 @@
   background: var(--secondary-color);
   box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   border-radius: 30px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .red {
   background: #ee1d3d;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .disabled {
-  background: #004D99;
+  background: #004d99;
   opacity: 0.5;
   color: rgba(0, 46, 92, 1);
-
 }
 
 .secondary {
