--- a/src/shared/pagination/ui/pagination.module.scss
+++ b/src/shared/pagination/ui/pagination.module.scss
@@ -1,33 +1,34 @@
 .pagination {
-    margin-top: 40px;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  .page {
+    width: 32px;
+    height: 32px;
+    color: var(--primaryColor);
+    float: left;
+    margin: 0 4px;
     display: flex;
     justify-content: center;
-    .page {
-        width: 32px;
-        height: 32px;
-        color: var(--primaryColor);;
-        float: left;
-        margin: 0 4px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        transition: background-color .3s;
-        background: #FFFFFF;
-        border: 1px solid #D5D6DC;
-        border-radius: 4px;
-    }
+    align-items: center;
+    text-decoration: none;
+    transition: background-color 0.3s;
+    background: #ffffff;
+    border: 1px solid #d5d6dc;
+    border-radius: 4px;
+  }
 }
 
-.pagination .page:hover {background-color: #ddd;}
+.pagination .page:hover {
+  background-color: #ddd;
+}
 .page.selected {
-    background: var(--secondary-color);
-    color: #FFFFFF;
+  background: var(--secondary-color);
+  color: #ffffff;
 }
 .icon {
-    fill: #7B7C88;
+  fill: #7b7c88;
 }
 .disabled {
-    fill: #D5D6DC;
+  fill: #d5d6dc;
 }
-
