--- a/src/widgets/Header/ui/modal/walletModal/WalletModal.module.scss
+++ b/src/widgets/Header/ui/modal/walletModal/WalletModal.module.scss
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     transform: translateY(-50%);
-    border-top: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
   }
 
   .close {
@@ -29,9 +29,13 @@
 
 .coin {
   display: flex;
-  gap: 20px;
   justify-content: space-between;
   font-size: 18px;
+  margin-bottom: 10px;
+  .name {
+    width: 200px;
+  }
+
   .info {
     display: flex;
     gap: 20px;
