--- a/src/widgets/Table/ui/TableRow/modal/addModal/AddModal.module.scss
+++ b/src/widgets/Table/ui/TableRow/modal/addModal/AddModal.module.scss
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     transform: translateY(-50%);
-    border-top: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
   }
 
   .close {
