--- a/src/shared/Loader/ui/Loader.module.scss
+++ b/src/shared/Loader/ui/Loader.module.scss
@@ -1,4 +1,17 @@
+@import "src/app/styles/mixins/mixins";
+
+
+.load {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 130px);
+}
 .loader {
+  //@include FlexCenter();
+  display: flex;
+  align-items: center;
+  align-content: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
