--- a/src/pages/AboutPage/ui/CoinPage.module.scss
+++ b/src/pages/AboutPage/ui/CoinPage.module.scss
@@ -1,8 +1,9 @@
+@import "src/app/styles/mixins/mixins";
+
 .page {
   .box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    @include FlexCenter(row, space-around, center, 20px);
+    flex-wrap: wrap;
     min-height: 100px;
     align-items: center;
     .title {
@@ -15,7 +16,7 @@
     }
 
     .btn {
-      max-width: 100px;
+      max-width: 130px;
       width: 100%;
     }
 
@@ -26,6 +27,10 @@
       justify-content: space-between;
 
       font-size: 19px;
+    }
+
+    @media (max-width: 770px) {
+
     }
   }
 }
