--- a/src/widgets/Table/ui/TableRow/TableRow.module.scss
+++ b/src/widgets/Table/ui/TableRow/TableRow.module.scss
@@ -40,3 +40,20 @@
   color: var(--primary-color);
   font-size: 17px;
 }
+
+@media (max-width: 770px) {
+  .item:nth-child(5),
+  .item:nth-child(6) {
+    display: none;
+  }
+}
+@media (max-width: 580px) {
+  .item:nth-child(4),
+  .item:nth-child(7),
+  .item:nth-child(8) {
+    display: none;
+  }
+  .item:nth-child(2) {
+    width: 100px;
+  }
+}
